--- a/src/components/MissionBanner/styles.css
+++ b/src/components/MissionBanner/styles.css
@@ -1,6 +1,7 @@
 #mission-banner_container {
+	position: absolute;
 	height: 100vh;
-	border-bottom: 1px solid black;
+	width: 90vw;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -15,9 +16,6 @@
 }
 
 #mission-banner-text_container {
-	position: absolute;
-	top: 0;
-	z-index: -1;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
