--- a/src/components/MissionBody/styles.css
+++ b/src/components/MissionBody/styles.css
@@ -1,16 +1,27 @@
+h1 {
+	font-size: 1.5vw;
+}
+
+h2 {
+	font-size: 1vw;
+}
 
 #mission-body_container {
+	margin: 95vh 0 0 0;
 	display: flex;
+	width: 100vw;
 	height: 100vh;
 	flex-direction: column;
-	justify-content: space-evenly;
+	justify-content: center;
 	align-items: center;
+	
+	border-top: 1px solid var(--soft-black);
 }
 
 img {
 	position: relative;
 	z-index: -3;
-	max-width: 33vw;
+	max-width: 25vw;
 }
 
 .mission-section_container {
